--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,12 @@
+body {
+	background-color:black;
+}
+
+div {
+	display:block;
+	overflow:auto;
+}
+
 #header{
 	z-index: 1;
 	position: fixed;
@@ -20,7 +29,7 @@
 
 .left {
 	float:left;
-	height:400px;
+	/*height:400px;*/
 	width:19%;
 	background-color:#81DAF5;
 	clear:left;
@@ -30,7 +39,7 @@
 
 .right {
 	float:right;
-	height:400px;
+	/*height:400px;*/
 	width:80%;
 	background-color:#D8D8D8;
 	clear:right;
@@ -52,7 +61,11 @@
 	font-size:1.2em;
 }
 
-.right p:first-child {
-	padding-top:5px;
+.right:first-child {
+	height:50px;
+}
+
+p {
 	padding-left:5px;
+	padding-top:5px;
 }
